// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> outlined renders an outlined Card 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="background.200"
    borderColor="primary.930"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1.0)",
          "borderColor": "rgba(11, 112, 231, 0.10)",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 1,
          "elevation": 0,
          "shadowColor": "rgba(11, 112, 231, 0.05)",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
        Array [
          Object {
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
          },
        ],
      ]
    }
    testID="ds-card"
    variant="outlined"
  />
</View>
`;

exports[`<Card /> outlined renders an outlined Card with custom background color 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="primary.920"
    borderColor="primary.930"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 0.05)",
          "borderColor": "rgba(11, 112, 231, 0.10)",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 1,
          "elevation": 0,
          "shadowColor": "rgba(11, 112, 231, 0.05)",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
        Array [
          Object {
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
          },
        ],
      ]
    }
    testID="ds-card"
    variant="outlined"
  />
</View>
`;

exports[`<Card /> outlined renders an outlined Card with custom border color 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="background.200"
    borderColor="primary.920"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1.0)",
          "borderColor": "rgba(11, 112, 231, 0.05)",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 1,
          "elevation": 0,
          "shadowColor": "rgba(11, 112, 231, 0.05)",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
        Array [
          Object {
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
          },
        ],
      ]
    }
    testID="ds-card"
    variant="outlined"
  />
</View>
`;

exports[`<Card /> outlined renders an outlined Card with text content 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="background.200"
    borderColor="primary.930"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1.0)",
          "borderColor": "rgba(11, 112, 231, 0.10)",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 1,
          "elevation": 0,
          "shadowColor": "rgba(11, 112, 231, 0.05)",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
        Array [
          Object {
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
          },
        ],
      ]
    }
    testID="ds-card"
    variant="outlined"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="shade.980"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Hello
    </Text>
  </View>
</View>
`;

exports[`<Card /> shadowed renders a shadowed Card 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="background.200"
    borderColor="primary.930"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1.0)",
          "borderColor": "black",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 2,
          "shadowColor": "rgba(11, 112, 231, 0.05)",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 20,
        },
        Array [
          Object {
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
          },
        ],
      ]
    }
    testID="ds-card"
    variant="shadowed"
  />
</View>
`;

exports[`<Card /> shadowed renders a shadowed Card with custom background color 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="primary.920"
    borderColor="primary.930"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(11, 112, 231, 0.05)",
          "borderColor": "black",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 2,
          "shadowColor": "rgba(11, 112, 231, 0.05)",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 20,
        },
        Array [
          Object {
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
          },
        ],
      ]
    }
    testID="ds-card"
    variant="shadowed"
  />
</View>
`;

exports[`<Card /> shadowed renders a shadowed Card with text content 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    backgroundColor="background.200"
    borderColor="primary.930"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1.0)",
          "borderColor": "black",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 2,
          "shadowColor": "rgba(11, 112, 231, 0.05)",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 20,
        },
        Array [
          Object {
            "paddingBottom": 12,
            "paddingLeft": 12,
            "paddingRight": 12,
            "paddingTop": 12,
          },
        ],
      ]
    }
    testID="ds-card"
    variant="shadowed"
  >
    <Text
      _isUnderlined={false}
      _letterSpacing="small"
      align="left"
      color="shade.980"
      size="large"
      style={
        Array [
          Object {
            "color": "rgba(22, 47, 86, 0.87)",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
      testID="ds-text"
      weight="regular"
    >
      Hello
    </Text>
  </View>
</View>
`;
